# Airtype

./: .gitignore  6.0  AGENTS.md  Airtype_PRD_v2.0.md  CLAUDE.md  DEV_RETROSPECTIVE.md  INSTALL.md  airtype.spec  pyproject.toml  requirements.txt
airtype/: __init__.py  __main__.py  config.py  logging_setup.py
airtype/core/: asr_breeze.py  asr_engine.py  asr_qwen_common.py  asr_qwen_mlx.py  asr_qwen_onnx.py  asr_qwen_openvino.py  asr_qwen_pytorch.py  asr_qwen_vulkan.py  asr_sherpa.py  asr_utils.py  audio_capture.py  controller.py  dictionary.py  hotkey.py  llm_polish.py  pipeline.py  vad.py  (+2 more)
docs/: DEVELOPMENT_LESSONS.md  PRD-v2.md  investigation-qwen3-asr-streaming-dictionary.md
locales/: en.json  ja.json  zh_CN.json  zh_TW.json
models/: README.md  manifest.json
openspec/: config.yaml
scripts/: generate_precomputed.py
tests/: test_asr_alternatives.py  test_asr_engine.py  test_asr_qwen_gpu.py  test_asr_qwen_mlx.py  test_asr_qwen_onnx.py  test_asr_qwen_openvino.py  test_asr_sherpa.py  test_audio_capture.py  test_config.py  test_controller.py  test_device_selector.py  test_dictionary.py  test_hardware_detect.py  test_hotkey.py  test_i18n.py  test_injector.py  test_llm_polish.py  test_logging_setup.py  test_main.py  test_model_manager.py  test_model_manager_hf_progress.py  test_overlay.py  test_packaging_smoke.py  test_performance.py  test_pipeline.py  test_preprocessor.py  test_security.py  test_settings_dictionary.py  test_settings_models.py  test_settings_shortcuts.py  test_settings_window.py  test_single_instance.py  test_tray_icon.py  test_vad_engine.py
(+335 files in other folders)
