[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "airtype"
version = "0.1.0"
description = "跨平台離線語音即時輸入工具"
authors = [{ name = "Airtype Team" }]
requires-python = ">=3.11"
dependencies = [
    "sounddevice>=0.4.7",
    "numpy>=1.26",
    "onnxruntime>=1.17",
    "psutil>=5.9",
    "pynput>=1.7",
    "pyperclip>=1.8",
    "pyautogui>=0.9.54",
    "PySide6>=6.6",
    "keyring>=24.0",
]

[project.optional-dependencies]
openvino = ["openvino>=2024.0"]
breeze = [
    "faster-whisper>=1.0",
    "transformers>=4.40",
]
sherpa = ["sherpa-onnx>=1.9"]
llm = [
    "llama-cpp-python>=0.2.90",
    "httpx>=0.27",
]
full = [
    "openvino>=2024.0",
    "tokenizers>=0.15",
    "tiktoken>=0.6",
    "faster-whisper>=1.0",
    "transformers>=4.40",
    "sherpa-onnx>=1.9",
    "llama-cpp-python>=0.2.90",
    "httpx>=0.27",
]
dev = [
    "pytest>=8.0",
    "pytest-benchmark>=4.0",
]

[project.scripts]
airtype = "airtype.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["airtype*"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
